--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
 
   cupertino_icons: ^1.0.2
 
+  dio: ^4.0.4
+  json_annotation: ^4.4.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
