--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
 
   dio: ^4.0.4
   json_annotation: ^4.4.0
+  flutter_bloc: ^8.0.1
+  equatable: ^2.0.3
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
